# rust

./: AGENTS.md  Cargo.toml  build_output.txt  build_output_after_quick_wins.txt  final_errors.txt  temp_check.txt
.claude/: settings.local.json
docs/: errors.md  implementation.md  implementation_summary.md  rust_migration_packages.md  tradebias_hybrid_manifest.md  tradebias_rust_arch.md
docs/OUTDATED-project-docs/: implementation.md  project_architecture.md
docs/ai-implementation/: 00-overview.md  02-type-system.md  04-indicators-tier1.md  06-registry-and-cache.md  07-backtesting-engine.md  10-testing.md  12-semantic-generation.md  13-optimization-methods.md  14-ml-feature-engineering.md  16-robustness-validation.md  18-data-connectors.md
docs/project-design/: strategy-refinement-methods.md  ux-flow-combinations.md
docs/project-fix/: elegant_solutions.md  strategy_generation_gaps.md  strategy_generation_summary.md
docs/project-implement/: 00-overview.md  01-phase1-compilation-fixes.md  03-phase3-additional-features.md  04-quick-reference-checklist.md  05-implementation-guide.md  06-polars-0.51-migration-chat.md  06-polars-0.51-migration.md  README.md  semantic-mapper.md
docs/project-implementation/: 03-primitives.md  (+5 more)
examples/: test_evolution.rs
src/: error.rs  lib.rs  main.rs  types.rs
tests/: backtester_comprehensive.rs  comparison_operators.rs  evolution_integration.rs  indicator_calculations.rs  indicator_verification.rs  integration_tests.rs  ma_period_literal_test.rs  portfolio.rs  portfolio_comprehensive.rs  strategy_integration.rs  test_total_value.rs
(+112 files in other folders)
