# Defines the metadata and dependencies for the Rust project.
[package]
name = "trade_bias_ui"
version = "0.1.0"
edition = "2021"

# Specifies the dependencies required for the project.
[dependencies]
eframe = "0.29.1"
egui = "0.29.1"
egui_node_graph2 = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
