[package]
name = "tradebias"
version = "0.1.0"
edition = "2021"

[dependencies]
config = { version = "0.15.16", features = ["json", "toml"] }
egui = "0.32.3"
oxigen = "2.2.2"
polars = { version = "0.38.0", features = ["lazy", "rolling_window", "ewma", "temporal", "dtype-full"] }
chrono = { version = "0.4.38", features = ["serde"] }
rand = "0.8.5"
rayon = "1.11.0"
serde = { version = "1.0.226", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
log = "0.4"
